# ai_request_router_scaffold

./: .env.example  Dockerfile  docker-compose.yml  pyproject.toml  readme.md
docs/: architecture.md
src/: config.py  main.py
src/routes/: ai_router.py
src/services/: ollama_service.py  openai_service.py
src/utils/: logger.py
