[tool.poetry]
name = "ai-backend-scaffold-py"
version = "0.1.0"
description = "FastAPI scaffold routing between OpenAI and local models"


[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.101.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
httpx = "^0.24.0"
python-dotenv = "^1.0.0"
pydantic = "^2.5.0"
pytest = "^7.4.0"